[gd_scene load_steps=3 format=3 uid="uid://colhmxsjlebm"]

[ext_resource type="PackedScene" uid="uid://wj00hlafyg4a" path="res://addons/cardengine/ui/dialogs/abstract_form_dialog/abstract_form_dialog.tscn" id="1"]
[ext_resource type="Script" path="res://addons/cardengine/ui/dialogs/step_transi_dialog/step_transi_dialog.gd" id="2"]

[node name="StepTransiDialog" instance=ExtResource("1")]
script = ExtResource("2")
offset_top = 1.0
offset_bottom = -458.0
window_title = "Transition"

[node name="MainLayout" parent="." index="0"]
grow_horizontal = 2
grow_vertical = 2

[node name="RandomLbl" type="Label" parent="MainLayout/Form" index="0"]
layout_mode = 2
text = "Random duration"

[node name="Random" type="CheckButton" parent="MainLayout/Form" index="1"]
layout_mode = 2
tooltip_text = "If ON the duration is taken from  the interval below randomly."

[node name="DurationLbl" type="Label" parent="MainLayout/Form" index="2"]
layout_mode = 2
text = "Duration"

[node name="Duration" type="SpinBox" parent="MainLayout/Form" index="3"]
layout_mode = 2
tooltip_text = "Fill in a number in millisecond."
min_value = -1000.0
max_value = 1000.0
rounded = true
allow_greater = true
allow_lesser = true
suffix = "ms"

[node name="DurationRangeLbl" type="Label" parent="MainLayout/Form" index="4"]
visible = false
layout_mode = 2
text = "Duration range"

[node name="DurationRangeLayout" type="HBoxContainer" parent="MainLayout/Form" index="5"]
visible = false
layout_mode = 2

[node name="DurationRangeMin" type="SpinBox" parent="MainLayout/Form/DurationRangeLayout" index="0"]
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "Fill in a number in millisecond."
min_value = -1000.0
max_value = 1000.0
rounded = true
allow_greater = true
allow_lesser = true
suffix = "ms"

[node name="DurationRangeMax" type="SpinBox" parent="MainLayout/Form/DurationRangeLayout" index="1"]
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "Fill in a number in millisecond."
min_value = -1000.0
max_value = 1000.0
rounded = true
allow_greater = true
allow_lesser = true
suffix = "ms"

[node name="TypeLbl" type="Label" parent="MainLayout/Form" index="6"]
layout_mode = 2
text = "Type"

[node name="Type" type="OptionButton" parent="MainLayout/Form" index="7"]
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "Choose which curve the transition uses to smooth the movement."

[node name="EasingLbl" type="Label" parent="MainLayout/Form" index="8"]
layout_mode = 2
text = "Easing"

[node name="Easing" type="OptionButton" parent="MainLayout/Form" index="9"]
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "Choose how the curve is applied to the transition."

[node name="FlipCardLbl" type="Label" parent="MainLayout/Form" index="10"]
layout_mode = 2
text = "Flip card when done"

[node name="FlipCard" type="CheckButton" parent="MainLayout/Form" index="11"]
layout_mode = 2
tooltip_text = "If ON the card is flipped when the transition is finished."

[node name="InteractiveLbl" type="Label" parent="MainLayout/Form" index="12"]
layout_mode = 2
text = "Interactive transition"

[node name="Interactive" type="CheckButton" parent="MainLayout/Form" index="13"]
layout_mode = 2
tooltip_text = "If OFF the card will not react to user inputs during the transition."

[connection signal="pressed" from="MainLayout/Form/Random" to="." method="_on_Random_pressed"]
